# tmpl_python_project_kickstart

./: .editorconfig  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copier.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/prompts/: update-template.prompt.md
.github/workflows/: ci.yml  release-please.yml
kickstart/: prompt.md  ralph.md
template/: .ecrc  .env.example  .gitattribures  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md.jinja  README.md.jinja  Taskfile.yml  Taskfile.yml.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  pyrightconfig.json  zensical.toml.jinja  {% if gh_token or concept7_api_key %}.env{% endif %}  {% if gh_token or context7_api_key %}.env{% endif %}  {% if license=="MIT" %}LICENSE{% endif %}.jinja
template/.devcontainer/: Dockerfile.jinja  devcontainer.json.jinja  post-create.sh.jinja
template/.github/: copilot-instructions.md.jinja  pull_request_template.md
template/.github/agents/: code-review-subagent.agent.md  (+2 more)
template/scripts/: ci-wait.sh  update-precommit.sh  update_version.py.jinja
{{project_name}}/: .pre-commit-config.yaml  .prettierignore  README.md.jinja  Taskfile.yml  mkdocs.yml.jinja  {% if codecov %}codecov.yml{% endif %}
{{project_name}}/.devcontainer/: Dockerfile.jinja  devcontainer.json  devcontainer.json.jinja  post-create.sh  post-create.sh.jinja
{{project_name}}/.github/: copilot-instructions.md.jinja
{{project_name}}/scripts/: update-precommit.sh
(+19 files in other folders)
