[project]
name = "tmpl-smarthome-app-python"
version = "0.1.0"
description = "Template for smart home apps based on Python and MQTT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

# optional dependency groups
[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "editorconfig-checker>=3.6.0",
    "pre-commit-hooks>=6.0.0",
    "codespell>=2.4.1",
    "ruff>=0.15.0",
    "mypy>=1.19.1"
]

[tool.ruff]
# Python linting and formatting configuration
# Aligned with frontend formatting (.prettierrc.json) for consistency
target-version = "py314"
line-length = 88
exclude = [
    "**/*.jinja",
]
